# sparki-dashboard

./: .env.example  .gitignore  CONTEXT.md  README.md  docker-compose.yml  logo_Colors.html
keycloak/realm-export/: sparki-realm.json
node-red/: Dockerfile  settings.js
node-red/flows/: flows.json
postgres/init/: 01-create-keycloak-schema.sql
scripts/: seed.py
webapp/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
webapp/app/: __init__.py  config.py  database.py  influx.py  main.py  models.py
webapp/app/auth/: dependencies.py  keycloak.py  routes.py  schemas.py
webapp/app/buildings/: models.py  routes.py  schemas.py  service.py
webapp/app/core/: audit.py  audit_service.py  base.py  healthz.py  permissions.py
webapp/app/organizations/: models.py
webapp/app/prices/: routes.py  schemas.py  service.py
webapp/app/sites/: models.py
webapp/app/users/: models.py
webapp/app/web/: __init__.py  buildings_web.py  oauth.py  prices_web.py  routes.py  session.py  templates_env.py  users_web.py
webapp/migrations/: env.py
webapp/migrations/versions/: 0001_initial.py  0002_rename_station_to_system.py
webapp/static/css/: app.css
webapp/static/img/: .gitkeep
webapp/templates/: base.html
webapp/templates/pages/: building_detail.html  buildings.html  landing.html  login.html  login_error.html  placeholder.html  portfolio.html  prices.html  users.html
webapp/templates/partials/: building_tile.html  building_tile_skeleton.html  building_tiles_full.html  building_tiles_full_skeleton.html  header.html  sidebar.html  user_row.html
webapp/tests/: conftest.py  test_audit.py  test_auth.py  test_building_detail.py  test_buildings_detail.py  test_buildings_list.py  test_health.py  test_keycloak_login.py  test_portfolio.py  test_portfolio_restructure.py  test_prices.py  test_prices_page.py  test_users_page.py  test_web_layout.py
