[project]
name = "sparki-webapp"
version = "0.1.0"
description = "Sparki — Onafhankelijk Dashboarding-platform voor Sigenergy-installaties"
authors = [
    { name = "Giquardo Vandaele" },
]
requires-python = ">=3.12"

# ─── Production dependencies ─────────────────────────────────────────
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Templates & static
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",       # form parsing

    # Settings & validation
    "pydantic[email]>=2.9.0",          # [email] adds email-validator for EmailStr
    "pydantic-settings>=2.6.0",

    # Database (async SQLAlchemy + Postgres)
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",                # async driver — used by the app
    "psycopg2-binary>=2.9.10",        # sync driver — used by Alembic only
    "alembic>=1.14.0",

    # Time-series database
    "influxdb-client[async]>=1.46.0",

    # Auth (Keycloak)
    "python-jose[cryptography]>=3.3.0",   # JWT validation
    "httpx>=0.27.2",                       # async HTTP for Keycloak JWKS

    # Security helpers
    "cryptography>=43.0.0",                # Fernet for Sigencloud creds at-rest

    # Session/cookie middleware
    "itsdangerous>=2.2.0",
]

# ─── Optional / dev dependencies ─────────────────────────────────────
[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.2",                   # test client (re-listed for clarity)
]

# ─── uv configuration ────────────────────────────────────────────────
[tool.uv]
# We don't package the webapp as an installable wheel — uvicorn runs
# `app.main:app` directly from the filesystem inside the container.
# This keeps the build simple and avoids hatchling readme/metadata issues.
package = false

# ─── Ruff (linter + formatter) ───────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["migrations/versions"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "S",     # flake8-bandit (security)
    "ASYNC", # async best practices
]
ignore = [
    "S101",  # use of assert (fine in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]   # relaxed security checks in tests

# ─── Mypy ────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# ─── Pytest ──────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
# Cache to /tmp because /app is not writeable as the non-root sparki user.
cache_dir = "/tmp/.pytest_cache"
addopts = "-v --cov=app --cov-report=term-missing --override-ini=cache_dir=/tmp/.pytest_cache"

# ─── Coverage ────────────────────────────────────────────────────────
[tool.coverage.run]
data_file = "/tmp/.coverage"
